--- a/m/2/index.html
+++ b/m/2/index.html
@@ -110,12 +110,12 @@
 		
 		
 		
-		<!-- <h2>Equations cartésiennes</h2> -->
+		<h2>Equations cartésiennes</h2>
 		
-		<!-- <p> <a href="m_2_eq_cart_1.pdf", target="_blank">  Equations cartésiennes  </a> </p> -->
-		<!-- <p> <a href="m_2_eq_cart_2.pdf", target="_blank">  Equation réduite  </a> </p> -->
-		<!-- <p> <a href="m_2_eq_cart_3.pdf", target="_blank">  Position relative de deux droites du plan  </a> </p> -->
-		<!-- <p> <a href="m_2_eq_cart_4.pdf", target="_blank">  Point d'intersection de deux droites du plan  </a> </p> -->
+		<p> <a href="m_2_eq_cart_1.pdf", target="_blank">  Equations cartésiennes  </a> </p>
+		<p> <a href="m_2_eq_cart_2.pdf", target="_blank">  Equation réduite  </a> </p>
+		<p> <a href="m_2_eq_cart_3.pdf", target="_blank">  Position relative de deux droites du plan  </a> </p>
+		<p> <a href="m_2_eq_cart_4.pdf", target="_blank">  Point d'intersection de deux droites du plan  </a> </p>
 		
 		<h2>Comprendre Python</h2>
 		
