--- a/m/2/index.html
+++ b/m/2/index.html
@@ -100,6 +100,11 @@
 		<p> <a href="m_2_affines_2.pdf", target="_blank"> Etude d'une fonction affine </a> </p>
 		<p> <a href="m_2_affines_3.pdf", target="_blank"> Tableaux de signes et inéquations </a> </p>
 		
+		<h2>Probabilités</h2>
+		
+		
+		<p> <a href="m_2_probas_1.pdf", target="_blank"> Expérience aléatoire </a> </p>
+		
 	
 			
 		<!-- <h2>Informations chiffrées</h2> -->
