--- a/m/2/index.html
+++ b/m/2/index.html
@@ -104,7 +104,7 @@
 		
 		
 		<p> <a href="m_2_probas_1.pdf", target="_blank"> Expérience aléatoire </a> </p>
-		
+		<p> <a href="m_2_probas_2.pdf", target="_blank"> Loi de probabilité </a> </p>
 	
 			
 		<!-- <h2>Informations chiffrées</h2> -->
