--- a/m/t/index.html
+++ b/m/t/index.html
@@ -5,7 +5,7 @@
 
 	<link href="style.css" rel="stylesheet">
 
-    <title>Maths et NSI</title>
+    <title>Spécialité Maths Terminale</title>
   </head>
   
   <body>
@@ -24,126 +24,28 @@
     </nav>
     
     <div id="contenu_cours">
-		<h2>Le second degré</h2>
+		<h2>Apprendre à raisonner</h2>
 			
-		<p> <a href="m_1_sec_degre_1.pdf">  Résoudre des équations et inéquations (rappels de seconde) </a> </p>
-		<p> <a href="m_1_sec_degre_2.pdf">  Fonction polynôme du second degré </a> </p>
-		<p> <a href="m_1_sec_degre_3.pdf">  Résolution de ax^2+bx+c=0 </a> </p>
-		<p> <a href="m_1_sec_degre_4.pdf">  Factorisation et signe de ax^2+bx+c </a> </p>
-		<p> <a href="m_1_sec_degre_5.pdf">  Variations d'une fonction polynôme du second degré</a> </p>
-		<p> <a href="m_1_sec_degre_6.pdf">  Courbe représentative</a> </p>
-		<!-- <p> <a href="m_1_sec_degre_7.pdf">  Somme et produit des racines </a> </p> -->
-		<p> <a class = "autre" href="m_1_sec_part2_cm.PNG", target="_blank">  Carte mentale</a> </p>
-		
-		<!-- <h2>Les équations cartésiennes (chapitre de seconde)</h2> -->
-			
-		<!-- <p> <a href="maths_1_ch2.pdf">  Le cours  </a> </p> -->
-		
-		<!-- <h2>Probabilités conditionnelles</h2> -->
-		
-		<!-- <p> <a href="m_1_ch3.pdf">  Le cours et les savoir-faire  </a> </p> -->
-		
-		<!-- <p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWtiRmhCZnBkM3htWTNLSjdwcTBfTGdrU3lIQWVnVWp5a3Y1NjJCR2JGLVUiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p> -->
+		<p> <a href="m_t_raisonnement_1.pdf">  Retour sur les raisonnements étudiés en première </a> </p>
+		<p> <a href="m_t_raisonnement_2.pdf">  Le raisonnement par récurrence </a> </p>
 		
 		
-		<h2>Probabilités conditionnelles</h2>
+		<h2>Les suites</h2>
 		
-		<p> <a href="m_1_proba_cond_1.pdf", target="_blank">  Rappels de seconde </a> </p>
-		<p> <a href="m_1_proba_cond_2.pdf", target="_blank">  Probabilités conditionnelles</a> </p>
-		<p> <a href="m_1_proba_cond_3.pdf", target="_blank">  Formules des probabilités totales</a> </p>
-		<p> <a href="m_1_proba_cond_4.pdf", target="_blank">  Indépendance </a> </p>		
-		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWtiRmhCZnBkM3htWTNLSjdwcTBfTGdrU3lIQWVnVWp5a3Y1NjJCR2JGLVUiLCJ1c2VycyI6IkFub255bWUifQ=="> QCM pour réviser le cours </a> </p>
-		<p> <a class="metier" href="../metiers_maths.pdf"> Découvrir le métier de Biochimiste </a> </p>
+		<p> <a href="m_t_suites_1.pdf", target="_blank">  Limites de suites</a> </p>
+		<p> <a href="m_t_suites_2.pdf", target="_blank"> Opérations sur les limites </a> </p>
+		<p> <a href="m_t_suites_3.pdf", target="_blank">  Limites et comparaisons</a> </p>
+		<p> <a href="m_t_suites_4.pdf", target="_blank">  Suites majorées, minorées, bornées, Monotonie et convergence </a> </p>
 		
 		
+		<h2>Géométrie dans l'espace</h2>
 		
-		<h2>Le nombre dérivé</h2>
+		<p> <a href="m_t_espace_1.pdf", target="_blank">  Vecteurs dans l'espace </a> </p>
+		<p> <a href="m_t_espace_2.pdf", target="_blank">  Droites et plans dans l'espace </a> </p>
+		<p> <a href="m_t_espace_3.pdf", target="_blank">  Position relative de droites et de plans dans l'espace</a> </p>
+		<p> <a href="m_t_espace_4.pdf", target="_blank">  Bases et repère dans l'espace </a> </p>
+		<p> <a href="m_t_espace_5.pdf", target="_blank"> Représentation paramétrique d'une droite dans l'espace</a> </p>
 		
-		<p> <a href="m_1_derivation_app.pdf", target="_blank">  Activité préparatoire </a> </p>
-		<p> <a class="autre" href="https://www.geogebra.org/m/re7scnj4", target="_blank">  Fichier Géogebra </a> </p>
-		<p> <a href="m_1_derivation_1.pdf", target="_blank">  Le nombre dérivé </a> </p>
-		<p> <a href="m_1_derivation_2.pdf", target="_blank">  Tangente à une courbe </a> </p>
-		<p> <a class = "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWlZMUp6REdNbHJjOXdPSDd5UmFNZ25SUVVqbmwzZWhCYVBkUnJTOVl2QVEiLCJ1c2VycyI6IkFub255bWUifQ==", target="_blank">  QCM : Lecture du nombre dérivé</a> </p>
-		<p> <a href="m_1_derivation_3.pdf", target="_blank">  Nombre dérivé de fonctions usuelles </a> </p>
-
-
-		<h2>Les équations de droites (rappels) </h2>
-		
-		<p> <a href="m_1_eq_1.pdf", target="_blank">  Equations cartésiennes </a> </p>
-
-		
-		
-	
-		
-
-		
-		
-		<h2>Les fonctions dérivées</h2>
-		<p> <a href="m_1_fonction_derivee_1.pdf", target="_blank">  La notion de fonction dérivée </a> </p>
-		<p> <a href="m_1_fonction_derivee_2.pdf", target="_blank">  Opérations sur les fonctions dérivées </a> </p>
-		<p> <a href="m_1_fonction_derivee_3.pdf", target="_blank">  Lien entre signe de f' et sens de variation de f </a> </p>
-		<p> <a href="m_1_fonction_derivee_4.pdf", target="_blank">  Extrema d'une fonction </a> </p>
-		
-		
-		<!-- <p> <a href="m_1_ch6.pdf", target="_blank">  Le cours  </a> </p> -->
-		<!-- <p> <a class="autre" href="maths_1_cm_fonctions_derivees", target="_blank">  Carte mentale  </a> </p> -->
-		
-		<h2>Trigonométrie</h2>
-		
-		
-		
-		<p> <a href="m_1_trigo_1.pdf", target="_blank">  Cercle trigonométrique et radian  </a> </p>
-		<p> <a href="m_1_trigo_2.pdf", target="_blank">  Repérage sur le cercle  </a> </p>
-		<p> <a href="m_1_trigo_3.pdf", target="_blank">  Cosinus et sinus  </a> </p>
-		<p> <a href="m_1_trigo_4.pdf", target="_blank">  Equations trigonométriques  </a> </p>
-		
-		
-		
-		
-		<h2>Les suites numériques</h2>
-		
-			
-		<p> <a href="m_1_suites_1.pdf", target="_blank">  Définitions et mode de génération  </a> </p>
-		<p><a class= "td" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/m/1/notebook/m_1_suites_1.ipynb">Python et les suites...</a></p>
-		<p> <a href="m_1_suites_2.pdf", target="_blank">  Variations de suites  </a> </p>
-		<p> <a href="m_1_suites_3.pdf", target="_blank">  Limites de suite </a> </p>
-		
-		
-		<h2>Les variables aléatoires</h2>
-		
-			
-		<p> <a href="m_1_va_1.pdf", target="_blank">  Définition  </a> </p>
-		<p> <a href="m_1_va_2.pdf", target="_blank">  Espérance, variance et écart-type</a> </p>
-		
-		
-		<h2>Les suites arithmétiques et les suites géométriques</h2>
-		<p> <a href="m_1_suites_sa.pdf", target="_blank">  Les suites arithmétiques  </a> </p>
-		<p> <a href="m_1_suites_sg.pdf", target="_blank">  Les suites géométriques  </a> </p>
-		
-		
-		
-		
-		
-		
-		<h2>Fonction exponnetielle</h2>
-		
-		
-		
-		<p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a>
-			<a href="https://www.geogebra.org/m/saadnnwr", target="_blank">  fichier geogebra approche  </a>		</p>
-		<p> <a href="m_1_expo_2.pdf", target="_blank">  Etude de la fonction exponentielle  </a> </p>
-	
-		
-		
-		
-		<h2>Le produit scalaire</h2>
-		
-		
-		
-		<p> <a href="m_1_produit_scalaire_1.pdf", target="_blank">  Expressions du produit scalaire  </a> </p>
-		<p> <a href="m_1_produit_scalaire_2.pdf", target="_blank">  Propriétés du produit scalaire  </a> </p>
-		<p> <a href="m_1_produit_scalaire_3.pdf", target="_blank">  Autres expressions du produit scalaire  </a> </p>
-		<p> <a href="m_1_produit_scalaire_4.pdf", target="_blank">  Calculer un angle ou une longueur  </a> </p>
 		
     </div>
     
