--- a/m/t/index.html
+++ b/m/t/index.html
@@ -36,7 +36,7 @@
 		<p> <a href="m_t_suites_2.pdf", target="_blank"> Opérations sur les limites </a> </p>
 		<p> <a href="m_t_suites_3.pdf", target="_blank">  Limites et comparaisons</a> </p>
 		<p> <a href="m_t_suites_4.pdf", target="_blank">  Suites majorées, minorées, bornées, Monotonie et convergence </a> </p>
-		
+		<p> <a class="autre" href="m_t_suites_5.pdf", target="_blank">  Des exos pour faire le point </a> </p>
 		
 		<h2>Géométrie dans l'espace</h2>
 		
