--- a/m/t/index.html
+++ b/m/t/index.html
@@ -45,7 +45,7 @@
 		<p> <a href="m_t_espace_3.pdf", target="_blank">  Position relative de droites et de plans dans l'espace</a> </p>
 		<p> <a href="m_t_espace_4.pdf", target="_blank">  Bases et repère dans l'espace </a> </p>
 		<p> <a href="m_t_espace_5.pdf", target="_blank"> Représentation paramétrique d'une droite dans l'espace</a> </p>
-		
+		<p> <a class="autre" href="m_t_espace_6.pdf", target="_blank">  Exercices à faire en autonomie </a> </p>
 		
     </div>
     
