--- a/m/t/index.html
+++ b/m/t/index.html
@@ -55,6 +55,13 @@
 		<p> <a href="m_t_derivation_3.pdf", target="_blank">  Complément de dérivation </a> </p>
 		
 		
+		<h2>Limites de fonctions</h2>
+		
+		<p> <a href="m_t_limites_1.pdf", target="_blank">  Limites en l'infini </a> </p>
+		<p> <a href="m_t_limites_2.pdf", target="_blank">  Limites en un réel </a> </p>
+		<p> <a href="m_t_limites_3.pdf", target="_blank">  Opérations sur les limites </a> </p>
+		<p> <a href="m_t_limites_3.pdf", target="_blank">  Limites et comparaison </a> </p>
+		
 		
     </div>
     
