--- a/m/t/index.html
+++ b/m/t/index.html
@@ -60,7 +60,17 @@
 		<p> <a href="m_t_limites_1.pdf", target="_blank">  Limites en l'infini </a> </p>
 		<p> <a href="m_t_limites_2.pdf", target="_blank">  Limites en un réel </a> </p>
 		<p> <a href="m_t_limites_3.pdf", target="_blank">  Opérations sur les limites </a> </p>
-		<p> <a href="m_t_limites_3.pdf", target="_blank">  Limites et comparaison </a> </p>
+		<p> <a href="m_t_limites_4.pdf", target="_blank">  Limites et comparaison </a> </p>
+		
+		
+		
+		
+		<h2>Python</h2>
+		
+		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
+		<p> <a href="m_t_python_2.pdf", target="_blank">  Les probas et python </a> </p>
+		<p> <a href="m_t_python_3.pdf", target="_blank">  Les fonctions et python </a> </p>
+		<p> <a href="m_t_python_4.pdf", target="_blank">  Les intégrales et python </a> </p>
 		
 		
     </div>
