--- a/m/t/index.html
+++ b/m/t/index.html
@@ -62,6 +62,10 @@
 		<p> <a href="m_t_limites_3.pdf", target="_blank">  Opérations sur les limites </a> </p>
 		<p> <a href="m_t_limites_4.pdf", target="_blank">  Limites et comparaison </a> </p>
 		
+		<h2>La convexité</h2>
+		
+		<p> <a href="m_t_convexite_1.pdf", target="_blank">  Convexité d'une fonction </a> </p>
+	
 		
 		
 		
