--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -56,10 +56,10 @@
 		<p> <a href="nsi_1_dico_2.pdf">  Méthodes associées et exercices  </a> <a href="dico_data.txt"> Les données </a> </p>
 
 		<h2>Interactions sur le Web</h2>
-		<p> <a href="nsi_1_web_1.pdf", target="_blank">  HTML et CSS </a> </p>
-		<p> <a href="nsi_1_web_2.pdf", target="_blank">  Les formulaires en HTML </a> </p>
+		<p> <a href="nsi_1_web_1.pdf", target="_blank">  Ecrire une page Web avec du HTML et du CSS </a> </p>
+		<p> <a href="nsi_1_web_2.pdf", target="_blank">  Construire un formulaire en HTML </a> </p>
 		<p> <a class="td" href="projet_html/nsi_1_projet_html_css.html" target="blank"> Projet HTML/CSS</a> <a href="projet.zip">Télécharger le modèle</a></p>
-		<p> <a href="nsi_1_web_3.pdf", target="_blank">  Le JavaScript </a> </p>
+		<p> <a href="nsi_1_web_3.pdf", target="_blank">  Interaction avec le JavaScript </a> </p>
 		<p> <a href="nsi_1_web_4.pdf", target="_blank">  Le protocole HTTP </a> <a href="serveur_python.txt"> le serveur python </a> </p>
 		<p> <a href="nsi_1_web_6.pdf", target="_blank">  Utiliser Flask pour créer un serveur local </a> </p>
 		<!-- <p> <a href="nsi_1_web_7.pdf", target="_blank">  Hors programme: développement web et php</a> </p> -->
