--- a/m/2/index.html
+++ b/m/2/index.html
@@ -54,7 +54,7 @@
 		<h2>Arithmétique</h2>
 		
 		<p> <a href="arithmetique_1.pdf"> Divisibilité </a> </p>
-		<p> <a href="arithmetique_2.pdf"> Divisibilité </a> </p>
+		<p> <a href="arithmetique_2.pdf"> Nombres pairs et impairs </a> </p>
 		<p> <a href="arithmetique_3.pdf"> Les nombres premiers </a> </p>
 	
 	
