--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -149,9 +149,9 @@
 			
 		<p> <a href="nsi_t_arbres_1.pdf">Les arbres</a> </p>
 		<p> <a href="nsi_t_arbres_2.pdf">Les arbres binaires</a> </p>
-		<p> <a href="nsi_t_algo_arbres_1.pdf">Algorithme sur les arbres binaire</a> </p>
-		<p> <a href="nsi_t_arbres_3.pdf">Les arbres binaires de recherche</a> </p>
-		<p> <a href="nsi_t_algo_arbres_2.pdf">Algorithmes sur les arbres binaires de recherche</a> </p>
+		<p> <a href="nsi_t_arbres_3.pdf">Algorithme sur les arbres binaire</a> </p>
+		<p> <a href="nsi_t_arbres_4.pdf">Les arbres binaires de recherche</a> </p>
+		<p> <a href="nsi_t_arbres_5.pdf">Algorithmes sur les arbres binaires de recherche</a> </p>
 		<p> <a class = "bac" href="nsi_t_arbres_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
