--- a/m/t/index.html
+++ b/m/t/index.html
@@ -66,6 +66,11 @@
 		
 		<p> <a href="m_t_convexite_1.pdf", target="_blank">  Convexité d'une fonction </a> </p>
 	
+		<h2>La continuité</h2>
+		
+		<p> <a href="m_t_continuite_1.pdf", target="_blank">  Continuité d'une fonction </a> </p>
+		<p> <a href="m_t_continuite_2.pdf", target="_blank">  Théorème des valeurs intermédiaires </a> </p>
+		<p> <a href="m_t_continuite_3.pdf", target="_blank">  Application à l'étude de suites</a> </p>
 		
 		
 		
