--- a/m/2/index.html
+++ b/m/2/index.html
@@ -63,6 +63,7 @@
 		
 		<p> <a href="m_2_variations_1.pdf"> Variations de fonctions </a> </p>
 		<p> <a href="m_2_variations_2.pdf"> Extréma de fonction </a> </p>
+			<p> <a href="m_2_variations_3.pdf"> Variation des fonctions de réference </a> </p>
 	
 	
 	
