--- a/m/t/index.html
+++ b/m/t/index.html
@@ -70,6 +70,7 @@
 		
 		<p> <a href="m_t_continuite_1.pdf", target="_blank">  Continuité d'une fonction </a> </p>
 		<p> <a href="m_t_continuite_2.pdf", target="_blank">  Théorème des valeurs intermédiaires </a> </p>
+		<p> <a class="td" href="dichotomiejb.html", target="_blank">  La dichotomie, activités géogébra </a> </p>
 		<p> <a href="m_t_continuite_3.pdf", target="_blank">  Application  à l'étude de suites</a> </p>
 		
 		
