--- a/m/t/index.html
+++ b/m/t/index.html
@@ -73,6 +73,9 @@
 		<p> <a class="td" href="dichotomiejb.html", target="_blank">  La dichotomie, activités géogébra </a> </p>
 		<p> <a href="m_t_continuite_3.pdf", target="_blank">  Application  à l'étude de suites</a> </p>
 		
+		<h2>La fonction logarithme népérien</h2>
+		
+		<p> <a href="m_t_ln_1.pdf", target="_blank">  Définition de la fonction logarithme népérien </a> </p>
 		
 		
 		<h2>Python</h2>
