--- a/m/t/index.html
+++ b/m/t/index.html
@@ -76,7 +76,7 @@
 		<h2>La fonction logarithme népérien</h2>
 		
 		<p> <a href="m_t_ln_1.pdf", target="_blank">  Définition de la fonction logarithme népérien </a> </p>
-		
+		<p> <a href="m_t_ln_2.pdf", target="_blank">  Relations fonctionnelles du logarithme népérien </a> </p>
 		
 		<h2>Python</h2>
 		
