--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -60,11 +60,22 @@
 		<p> <a href="nsi_1_web_2.pdf", target="_blank">  Construire un formulaire en HTML </a> </p>
 		<p> <a class="td" href="projet_html/nsi_1_projet_html_css.html" target="blank"> Projet HTML/CSS</a> <a href="projet.zip">Télécharger le modèle</a></p>
 		<p> <a href="nsi_1_web_3.pdf", target="_blank">  Interaction avec le JavaScript </a> </p>
-		<p> <a href="nsi_1_web_4.pdf", target="_blank">  Le protocole HTTP </a> <a href="serveur_python.txt"> le serveur python </a> </p>
+		<p> <a href="nsi_1_web_4.pdf", target="_blank">  L'architecture du Web </a> <a href="serveur_python.txt"> le serveur python </a> </p>
 		<p> <a href="nsi_1_web_6.pdf", target="_blank">  Utiliser Flask pour créer un serveur local </a> </p>
 		<!-- <p> <a href="nsi_1_web_7.pdf", target="_blank">  Hors programme: développement web et php</a> </p> -->
 		<!-- <p> <a href="nsi_1_ch7.pdf", target="_blank">  Le cours  </a> </p> -->
 		<!-- <p> <a class="td" href="projets/index.html", target="_blank">  Les projets  </a> </p> -->
+		
+		
+		
+		
+			<h2>Algorithmes</h2>
+		
+		<p> <a href="nsi_1_algo_1.pdf", target="_blank">  Intro sur les algorithmes</a> </p>
+		<p> <a href="nsi_1_algo_2.pdf", target="_blank">  Recherches de valeurs dans un tableau</a> </p>
+		<p> <a href="nsi_1_algo_3.pdf", target="_blank">  Tri selection</a> </p>
+		<p> <a href="nsi_1_algo_4.pdf", target="_blank">  Tri insertion </a> </p>
+		<p> <a href="nsi_1_algo_5.pdf", target="_blank">  Tri dichotomique </a> </p>
 		
 		
 		<h2>Architecture matérielle</h2>
@@ -76,13 +87,7 @@
 		<p> <a href="nsi_1_archi_5.pdf", target="_blank">  Simulation d'un CPU </a> </p>
 		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMUJCUUlobkRzRGRTTm1MbzVmQXFOYzJENTZseGp4MEMzQWZfTzNMbkJYbGsiLCJ1c2VycyI6IkFub255bWUifQ==" > S'entraîner avec l'IE de l'an passé !</a></p>
 
-			<h2>Algorithmes</h2>
-		
-		<p> <a href="nsi_1_algo_1.pdf", target="_blank">  Intro sur les algorithmes</a> </p>
-		<p> <a href="nsi_1_algo_2.pdf", target="_blank">  Recherches de valeurs dans un tableau</a> </p>
-		<p> <a href="nsi_1_algo_3.pdf", target="_blank">  Tri selection</a> </p>
-		<p> <a href="nsi_1_algo_4.pdf", target="_blank">  Tri insertion </a> </p>
-		<p> <a href="nsi_1_algo_5.pdf", target="_blank">  Tri dichotomique </a> </p>	
+			
 		
 		
 		
