--- a/m/t/index.html
+++ b/m/t/index.html
@@ -79,6 +79,11 @@
 		<p> <a href="m_t_ln_2.pdf", target="_blank">  Relations fonctionnelles du logarithme népérien </a> </p>
 		<p> <a href="m_t_ln_3.pdf", target="_blank">  Limites avec la fonction ln</a> </p>
 		
+		<h2>Equation différentielle et primitive</h2>
+		
+		<p> <a href="m_t_primitive_1.pdf", target="_blank">  Equation différentielles et primitives </a> </p>
+	
+		
 		<h2>Python</h2>
 		
 		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
