--- a/m/t/index.html
+++ b/m/t/index.html
@@ -82,6 +82,7 @@
 		<h2>Equation différentielle et primitive</h2>
 		
 		<p> <a href="m_t_primitive_1.pdf", target="_blank">  Equation différentielles et primitives </a> </p>
+		<p> <a href="m_t_primitive_2.pdf", target="_blank">  Recherche de primitives d'une fonction </a> </p>
 	
 		
 		<h2>Python</h2>
