--- a/m/t/index.html
+++ b/m/t/index.html
@@ -83,7 +83,7 @@
 		
 		<p> <a href="m_t_primitive_1.pdf", target="_blank">  Equation différentielles et primitives </a> </p>
 		<p> <a href="m_t_primitive_2.pdf", target="_blank">  Recherche de primitives d'une fonction </a> </p>
-	
+		<p> <a href="m_t_primitive_".pdf", target="_blank"> Equations différentielles </a> </p>
 		
 		<h2>Python</h2>
 		
