--- a/m/t/index.html
+++ b/m/t/index.html
@@ -85,6 +85,16 @@
 		<p> <a href="m_t_primitive_2.pdf", target="_blank">  Recherche de primitives d'une fonction </a> </p>
 		<p> <a href="m_t_primitive_3.pdf", target="_blank"> Equations différentielles </a> </p>
 		
+		
+		<h2>Calcul intégral</h2>
+		
+		
+		<p> <a href="m_t_int_0.pdf", target="_blank">  Calcul intégral et GO </a> </p>
+		<p> <a href="m_t_int_1.pdf", target="_blank">  Définitions </a> </p>
+		<p> <a href="m_t_int_2.pdf", target="_blank">  Intégrales et primitives </a> </p>
+		<p> <a href="m_t_int_3.pdf", target="_blank"> Propriétés </a> </p>
+		<p> <a href="m_t_int_4.pdf", target="_blank"> Applications du calcul intégral </a> </p>
+		
 		<h2>Python</h2>
 		
 		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
