--- a/m/t/index.html
+++ b/m/t/index.html
@@ -95,6 +95,14 @@
 		<p> <a href="m_t_int_3.pdf", target="_blank"> Propriétés </a> </p>
 		<p> <a href="m_t_int_4.pdf", target="_blank"> Applications du calcul intégral </a> </p>
 		
+		
+		<h2>Dénombrement</h2>
+		
+		
+		<p> <a href="m_t_denombrement_1.pdf", target="_blank">  Le principe du dénombrement </a> </p>
+		<p> <a href="m_t_denombrement_2.pdf", target="_blank">  Arrangements et permutations </a> </p>
+		<p> <a href="m_t_denombrement_3.pdf", target="_blank">  Combinaisons </a> </p>
+		
 		<h2>Python</h2>
 		
 		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
