--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -208,8 +208,9 @@
 		<p> <a href="nsi_t_graphe_2.pdf">Implémentation d'un graphe</a> </p>
 		
 		<h2> Algorithmes sur les graphes </h2>
-		<p> <a href="nsi_t_algo_graphe_1.pdf">Algorithmes sur les graphes</a> </p>
-		
+		<p> <a href="nsi_t_algo_graphe_1.pdf">Parcours en largeur</a> </p>
+		<p> <a href="nsi_t_algo_graphe_2.pdf">Parcours en profondeur</a> </p>
+		<p> <a href="nsi_t_algo_graphe_3.pdf">Applications</a> </p>
 		
 		
 		<h2>Paradigmes de programmation</h2>
