--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -213,6 +213,14 @@
 		<p> <a href="nsi_t_algo_graphe_3.pdf">Applications</a> </p>
 		
 		
+		<h2> Programmation dynamique</h2>
+		<p> <a href="nsi_t_prog_dyn_1.pdf">Exemple</a> </p>
+		<p> <a href="nsi_t_prog_dyn_2.pdf">La programmation dynamique</a> </p>
+		<p> <a href="nsi_t_prog_dyn_3.pdf">Le rendu de monnaie</a> </p>
+		<p> <a href="nsi_t_prog_dyn_4.pdf">Un autre exemple</a> </p>
+		
+		
+		
 		<h2>Paradigmes de programmation</h2>
 			
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
