--- a/m/t/index.html
+++ b/m/t/index.html
@@ -103,6 +103,14 @@
 		<p> <a href="m_t_denombrement_2.pdf", target="_blank">  Arrangements et permutations </a> </p>
 		<p> <a href="m_t_denombrement_3.pdf", target="_blank">  Combinaisons </a> </p>
 		
+		
+		<h2>Fonctions circulaires</h2>
+		
+		
+		<p> <a href="m_t_circulaires_0.pdf", target="_blank">  Rappels de première </a> </p>
+		<p> <a href="m_t_circulaires_1.pdf", target="_blank">  Définitions et propriétés </a> </p>
+		<p> <a href="m_t_circulaires_2.pdf", target="_blank">  Equations trigonométriques </a> </p>
+		
 		<h2>Python</h2>
 		
 		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
