--- a/m/t/index.html
+++ b/m/t/index.html
@@ -111,6 +111,13 @@
 		<p> <a href="m_t_circulaires_1.pdf", target="_blank">  Définitions et propriétés </a> </p>
 		<p> <a href="m_t_circulaires_2.pdf", target="_blank">  Equations trigonométriques </a> </p>
 		
+		
+		<h2>Succession d'épreuves indépendantes et loi binomiale </h2>
+		
+		<p> <a href="m_t_loi_binom_0.pdf", target="_blank">  Intro  </a> </p>
+		<p> <a href="m_t_loi_binom_1.pdf", target="_blank">  Epreuve de Bernoulli et succession d'épreuves  </a> </p>
+		<p> <a href="m_t_loi_binom_2.pdf", target="_blank">  loi binomiale </a> </p>
+		
 		<h2>Python</h2>
 		
 		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
