--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -219,7 +219,16 @@
 		<p> <a href="nsi_t_prog_dyn_3.pdf">Le rendu de monnaie</a> </p>
 		<p> <a href="nsi_t_prog_dyn_4.pdf">Un autre exemple</a> </p>
 		
-		
+		<h2>Cryptographie</h2>
+			
+		<p> <a href="nsi_t_securisation_1.pdf">Intro</a> </p>
+		<p> <a href="nsi_t_securisation_2.pdf">Le chiffrement symétrique</a>   
+		  <a class="autre" href="secret.txt"> (ici, le code secret à déchiffrer)</a> </p>
+		<p> <a href="nsi_t_securisation_3.pdf">Le chiffrement asymétrique</a> 
+		<a class="autre" href="secret2.txt"> (ici, le code secret à déchiffrer)</a> </p>
+		<p> <a href="nsi_t_securisation_4.pdf">Authentification</a> </p>
+		<p> <a href="nsi_t_securisation_5.pdf">Le protocole https</a> </p>
+		<p> <a href="https://www.root-me.org/">Pour les plus curieux : S'entraîner au hacking éthique !</a> </p>
 		
 		<h2>Paradigmes de programmation</h2>
 			
@@ -237,16 +246,7 @@
 		
 		
 		
-		<h2>Sécurisation</h2>
-			
-		<p> <a href="nsi_t_securisation_1.pdf">Intro</a> </p>
-		<p> <a href="nsi_t_securisation_2.pdf">Le chiffrement symétrique</a>   
-		  <a class="autre" href="secret.txt"> (ici, le code secret à déchiffrer)</a> </p>
-		<p> <a href="nsi_t_securisation_3.pdf">Le chiffrement asymétrique</a> 
-		<a class="autre" href="secret2.txt"> (ici, le code secret à déchiffrer)</a> </p>
-		<p> <a href="nsi_t_securisation_4.pdf">Authentification</a> </p>
-		<p> <a href="nsi_t_securisation_5.pdf">Le protocole https</a> </p>
-		<p> <a href="https://www.root-me.org/">Pour les plus curieux : S'entraîner au hacking éthique !</a> </p>
+		
 		
 		
 		<h2> Validation d'un programme </h2>
