--- a/m/t/index.html
+++ b/m/t/index.html
@@ -125,6 +125,15 @@
 		<p> <a href="m_t_loi_binom_1.pdf", target="_blank">  Epreuve de Bernoulli et succession d'épreuves  </a> </p>
 		<p> <a href="m_t_loi_binom_2.pdf", target="_blank">  loi binomiale </a> </p>
 		
+		
+		<h2> Les variables aléatoires </h2>
+		
+		<p> <a href="m_t_va_0.pdf", target="_blank">  Rappels  </a> </p>
+		<p> <a href="m_t_va_1.pdf", target="_blank">  Opérations sur les variables aléatoires  </a> </p>
+		<p> <a href="m_t_va_2.pdf", target="_blank">  Echantillon d'une loi de probabilité </a> </p>
+		<p> <a href="m_t_va_2.pdf", target="_blank">  Loi des grands nombres </a> </p>
+		
+		
 		<h2>Python</h2>
 		
 		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
