--- a/m/t/index.html
+++ b/m/t/index.html
@@ -134,6 +134,16 @@
 		<p> <a href="m_t_va_3.pdf", target="_blank">  Loi des grands nombres </a> </p>
 		
 		
+		
+		<h2> Orthogonalité dans l'espace</h2>
+		
+		<p> <a href="m_t_ortho_0.pdf", target="_blank">  Rappels sur le produit scalaire dans le plan </a> </p>
+		<p> <a href="m_t_ortho_1.pdf", target="_blank">  Produit scalaire dans l'espace  </a> </p>
+		<p> <a href="m_t_ortho_2.pdf", target="_blank">  Orthogonalité de droites et de plans </a> </p>
+		<p> <a href="m_t_ortho_3.pdf", target="_blank">   </a> Produit sclaire dans un repère de l'espace</p>
+		
+		
+		
 		<h2>Python</h2>
 		
 		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
