--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -243,7 +243,18 @@
 			
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
 		
+		<h2>Recherche textuelle</h2>
+			
+		<p> <a href="nsi_t_rt_1.pdf">Introduction</a> </p>
+		<p> <a href="nsi_t_rt_2.pdf">Deux premiers algorithmes naïfs</a> </p>
+		<p> <a href="nsi_t_rt_3.pdf">L'algorithme de Boyer-Moore</a> </p>
+		<p> <a href="nsi_t_rt_4.pdf">Prolongement</a> </p>
 		
+		<h2>Calcuabilité et décidabilité</h2>
+			
+		<p> <a href="nsi_t_calcul_1.pdf">Un programme comme donné ?</a> </p>
+		<p> <a href="nsi_t_socs_2.pdf">Calculabilité</a> </p>
+		<p> <a href="nsi_t_socs_3.pdf">Décidabilité</a> </p>
 		
 		
 		
