--- a/m/t/index.html
+++ b/m/t/index.html
@@ -141,7 +141,7 @@
 		<p> <a href="m_t_ortho_1.pdf", target="_blank">  Produit scalaire dans l'espace  </a> </p>
 		<p> <a href="m_t_ortho_2.pdf", target="_blank">  Orthogonalité de droites et de plans </a> </p>
 		<p> <a href="m_t_ortho_3.pdf", target="_blank">   Produit sclaire dans un repère de l'espace </a> </p>
-		
+		<p> <a href="m_t_ortho_4.pdf", target="_blank">   Vecteur normal  </a> </p>
 		
 		
 		<h2>Python</h2>
