--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -253,8 +253,8 @@
 		<h2>Calcuabilité et décidabilité</h2>
 			
 		<p> <a href="nsi_t_calcul_1.pdf">Un programme comme donné ?</a> </p>
-		<p> <a href="nsi_t_socs_2.pdf">Calculabilité</a> </p>
-		<p> <a href="nsi_t_socs_3.pdf">Décidabilité</a> </p>
+		<p> <a href="nsi_t_calcul_2.pdf">Calculabilité</a> </p>
+		<p> <a href="nsi_t_calcul_3.pdf">Décidabilité</a> </p>
 		
 		
 		
