--- a/m/t/index.html
+++ b/m/t/index.html
@@ -29,6 +29,10 @@
 			
 		<p> <a href="bac_2024_0.pdf">  Les sujets zéros ! </a> </p>
 	
+		<h2>Retour sur les fonctions et les suites</h2>
+			
+		<p> <a href="m_t_rappels_fonctions.pdf">  Retour sur les fonctions de première </a> </p>
+		<p> <a href="m_t_rappels_suites.pdf">  Retour sur les suites de première </a> </p>
 	
 	
 		<h2>Apprendre à raisonner</h2>
