--- a/m/t/index.html
+++ b/m/t/index.html
@@ -29,15 +29,15 @@
 			
 		<p> <a href="bac_2024_0.pdf">  Les sujets zéros ! </a> </p>
 	
-		<h2>Chapitre 0: Retour sur les fonctions et les suites</h2>
+		<h2>Chapitre 0: Retour sur les fonctions, les suites, et quelques raisonnements vus en classe de première</h2>
 			
 		<p> <a href="m_t_rappels_fonctions.pdf">  Retour sur les fonctions de première </a> </p>
 		<p> <a href="m_t_rappels_suites.pdf">  Retour sur les suites de première </a> </p>
-	
-	
-		<h2>Apprendre à raisonner</h2>
-			
 		<p> <a href="m_t_raisonnement_1.pdf">  Retour sur les raisonnements étudiés en première </a> </p>
+	
+		<h2>Le raisononnement par récurrence</h2>
+	
+	
 		<p> <a href="m_t_raisonnement_2.pdf">  Le raisonnement par récurrence </a> </p>
 		
 		
