--- a/m/t/index.html
+++ b/m/t/index.html
@@ -59,10 +59,8 @@
 		<p> <a class="autre" href="m_t_espace_6.pdf", target="_blank">  Exercices à faire en autonomie </a> </p>
 		
 		
-		<h2>Dérivation</h2>
+		<h2>Compléments sur la dérivation</h2>
 		
-		<p> <a href="m_t_derivation_1.pdf", target="_blank">  La notion de nombre dérivé (rappels) </a> </p>
-		<p> <a href="m_t_derivation_2.pdf", target="_blank">  La notion de fonction dérivée (rappels) </a> </p>
 		<p> <a href="m_t_derivation_3.pdf", target="_blank">  Complément de dérivation </a> </p>
 		
 		
