--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -137,10 +137,11 @@
 		<h2>Les structures linéaires</h2>
 			
 		<p> <a href="nsi_t_sl_1.pdf">Types abstraits...</a> </p>
-		<p> <a href="nsi_t_sl_2.pdf">Quels sont les différents moyens d'implémenter une liste, une file et une pile</a> </p>
-		<p> <a href="nsi_t_sl_3.pdf">Implémentation des listes chaînées</a> </p>
-		<p> <a href="nsi_t_sl_4.pdf">Implémenter une pile</a> </p>
-		<p> <a href="nsi_t_sl_5.pdf">Implémentation une file</a> </p>
+		<!-- <p> <a href="nsi_t_sl_2.pdf">Quels sont les différents moyens d'implémenter une liste, une file et une pile</a> </p> -->
+		<p> <a href="nsi_t_sl_2.pdf">Implémentation d'une liste (appelée liste chaînée)</a> </p>
+		<p> <a href="nsi_t_sl_3.pdf">Implémenter d'une pile</a> </p>
+		<p> <a href="nsi_t_sl_4.pdf">Implémentation d'une file</a> </p>
+		<p> <a href="nsi_t_sl_5.pdf">Implémentation d'un dictionnaire</a> </p>
 		<p> <a class = "td" href="nsi_t_sl_td.pdf">Les labyrinthes</a> </p>
 		<p> <a class = "bac" href="nsi_t_sl_bac.pdf">Les sujets de type bac</a> </p>
 		
