--- a/m/2/index.html
+++ b/m/2/index.html
@@ -50,6 +50,7 @@
 		<p> <a href="vecteurs_1.pdf">Qu'est ce qu'un vecteur ?</a> </p>
 		<p> <a href="vecteurs_2.pdf">Opérations sur les vecteurs</a> </p>
 		<p> <a href="vecteurs_3.pdf">Vecteurs colinéaires</a> </p>
+		<p> <a class="qcm" href= "https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWRmNlprS2I4YlNidVlmNTVOaG1EOUNXYTlMdklOOGNhbFZ5bEdKMm02dm8iLCJ1c2VycyI6IkFub255bWUifQ=="> QCM Lectures graphiques ! </a> </p>
 		
 		<h2>Arithmétique</h2>
 		
