--- a/m/t/index.html
+++ b/m/t/index.html
@@ -35,13 +35,13 @@
 		<p> <a href="m_t_rappels_suites.pdf">  Retour sur les suites de première </a> </p>
 		<p> <a href="m_t_raisonnement_1.pdf">  Retour sur les raisonnements étudiés en première </a> </p>
 	
-		<h2>Le raisononnement par récurrence</h2>
+		<h2>Chapitre 1: Le raisononnement par récurrence</h2>
 	
 	
 		<p> <a href="m_t_raisonnement_2.pdf">  Le raisonnement par récurrence </a> </p>
 		
 		
-		<h2>Chapitre 1: Les suites</h2>
+		<h2>Chapitre 2: Les suites</h2>
 		
 		<p> <a href="m_t_suites_1.pdf", target="_blank">  Limites de suites</a> </p>
 		<p> <a href="m_t_suites_2.pdf", target="_blank"> Opérations sur les limites </a> </p>
@@ -49,7 +49,7 @@
 		<p> <a href="m_t_suites_4.pdf", target="_blank">  Suites majorées, minorées, bornées, Monotonie et convergence </a> </p>
 		<p> <a class="autre" href="m_t_suites_5.pdf", target="_blank">  Des exos pour faire le point </a> </p>
 		
-		<h2>Chapitre 2: Géométrie dans l'espace</h2>
+		<h2>Chapitre 3: Géométrie dans l'espace</h2>
 		
 		<p> <a href="m_t_espace_1.pdf", target="_blank">  Vecteurs dans l'espace </a> </p>
 		<p> <a href="m_t_espace_2.pdf", target="_blank">  Droites et plans dans l'espace </a> </p>
@@ -59,37 +59,37 @@
 		<p> <a class="autre" href="m_t_espace_6.pdf", target="_blank">  Exercices à faire en autonomie </a> </p>
 		
 		
-		<h2>Chapitre 3: Compléments sur la dérivation</h2>
+		<h2>Chapitre 4: Compléments sur la dérivation</h2>
 		
 		<p> <a href="m_t_derivation_3.pdf", target="_blank">  Complément de dérivation </a> </p>
 		
 		
-		<h2>Chapitre 4: Limites de fonctions</h2>
+		<h2>Chapitre 5: Limites de fonctions</h2>
 		
 		<p> <a href="m_t_limites_1.pdf", target="_blank">  Limites en l'infini </a> </p>
 		<p> <a href="m_t_limites_2.pdf", target="_blank">  Limites en un réel </a> </p>
 		<p> <a href="m_t_limites_3.pdf", target="_blank">  Opérations sur les limites </a> </p>
 		<p> <a href="m_t_limites_4.pdf", target="_blank">  Limites et comparaison </a> </p>
 		
-		<h2>Chapitre 5: La convexité</h2>
+		<h2>Chapitre 6: La convexité</h2>
 		
 		<p> <a href="m_t_convexite_1.pdf", target="_blank">  Convexité d'une fonction </a> </p>
 	
-		<h2>Chapitre 6: La continuité</h2>
+		<h2>Chapitre 7: La continuité</h2>
 		
 		<p> <a href="m_t_continuite_1.pdf", target="_blank">  Continuité d'une fonction </a> </p>
 		<p> <a href="m_t_continuite_2.pdf", target="_blank">  Théorème des valeurs intermédiaires </a> </p>
 		<p> <a class="td" href="dichotomiejb.html", target="_blank">  La dichotomie, activités géogébra </a> </p>
 		<p> <a href="m_t_continuite_3.pdf", target="_blank">  Application  à l'étude de suites</a> </p>
 		
-		<h2>Chapitre 7: La fonction logarithme népérien</h2>
+		<h2>Chapitre 8: La fonction logarithme népérien</h2>
 		
 		<p> <a href="m_t_ln_1.pdf", target="_blank">  Définition de la fonction logarithme népérien </a> </p>
 		<p> <a href="m_t_ln_2.pdf", target="_blank">  Relations fonctionnelles du logarithme népérien </a> </p>
 		<p> <a href="m_t_ln_3.pdf", target="_blank">  Limites avec la fonction ln</a> </p>
 		
 		
-		<h2>Chapitre 8: Dénombrement</h2>
+		<h2>Chapitre 9: Dénombrement</h2>
 		
 		
 		<p> <a href="m_t_denombrement_1.pdf", target="_blank">  Le principe du dénombrement </a> </p>
