--- a/m/2/index.html
+++ b/m/2/index.html
@@ -24,7 +24,7 @@
     </nav>
     
     <div id="contenu_cours">
-		<h2>Nombres et intervalles</h2>
+		<h2>Chapitre 1 :Nombres et intervalles</h2>
 			
 		<p> <a href="m_2_ch1_1.pdf">  Les ensembles de nombres  </a> </p>
 		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMVlWRV9mSnJ1YkxoQzlRMl9VMkxQRXZ4YzRiYmZ0Qk5EZjJhaTllUjZ3b28iLCJ1c2VycyI6IkFub255bWUifQ=="> QCM pour s'entraîner avant l'IE </a> </p>
@@ -33,7 +33,7 @@
 		<p> <a href="m_2_ch1_4.pdf">  Les racines carrées  </a> </p>
 		<p> <a href="m_2_ch1_5.pdf">  La valeur absolue  </a> </p>
 		
-		<h2>Généralités sur les fonctions</h2>
+		<h2>Chapitre 2 :Généralités sur les fonctions</h2>
 			
 		<p> <a href="m_2_generalites_fonctions_1.pdf">  La notion de fonction </a> </p>
 		<p> <a href="m_2_generalites_fonctions_2.pdf">  Courbe représentative de fonction </a> </p>
@@ -45,14 +45,14 @@
 		<!-- <p> <a href="m_2_generalites_fonctions_5.pdf">  Extrema de fonctions</a> </p> -->
 		<!-- <p> <a class = "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMXIzbVZBWGxyYVg4Qjh0Mm5TM01lRFFIVHBTNVBTRUEwUkY5eVppUUljRTAiLCJ1c2VycyI6IkFub255bWUifQ=="> Un petit QCM d'auto-évaluation !! </a> </p> -->
 		
-		<h2>Les vecteurs du plan</h2>
+		<h2>Chapitre 3 :Les vecteurs du plan</h2>
 		
 		<p> <a href="vecteurs_1.pdf">Qu'est ce qu'un vecteur ?</a> </p>
 		<p> <a href="vecteurs_2.pdf">Opérations sur les vecteurs</a> </p>
 		<p> <a href="vecteurs_3.pdf">Vecteurs colinéaires</a> </p>
 		<p> <a class="qcm" href= "https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWRmNlprS2I4YlNidVlmNTVOaG1EOUNXYTlMdklOOGNhbFZ5bEdKMm02dm8iLCJ1c2VycyI6IkFub255bWUifQ=="> QCM vecteurs ! </a> </p>
 		
-		<h2>Arithmétique</h2>
+		<h2>Chapitre 4 :Arithmétique</h2>
 		
 		<p> <a href="arithmetique_1.pdf"> Divisibilité </a> </p>
 		<p> <a href="arithmetique_2.pdf"> Nombres pairs et impairs </a> </p>
@@ -60,7 +60,7 @@
 	
 	
 	
-	<h2>Variations et extréma de fonctions</h2>
+	<h2>Chapitre 5 :Variations et extréma de fonctions</h2>
 		
 		<p> <a href="m_2_variations_1.pdf"> Variations de fonctions </a> </p>
 		<p> <a href="m_2_variations_2.pdf"> Extréma de fonction </a> </p>
@@ -87,7 +87,7 @@
 		
 		
 		
-		<h2>Repèrage</h2>
+		<h2>Chapitre 6 :Repèrage</h2>
 		
 		
 		<p> <a href="m_2_reperage_activite.pdf", target="_blank"> Mais ils sont où les carrées ? :-) </a> </p>
@@ -95,7 +95,7 @@
 		<p> <a href="m_2_reperage_2.pdf", target="_blank">  Coordonnées d'un vecteur </a> </p>
 		<p> <a href="m_2_reperage_3.pdf", target="_blank">  Colinéarité de deux vecteurs </a> </p>
 		
-		<h2>Fonctions affines</h2>
+		<h2>Chapitre 7 :Fonctions affines</h2>
 		
 		
 		<p> <a href="m_2_affines_1.pdf", target="_blank"> Définitions et premières propriétés </a> </p>
@@ -103,7 +103,7 @@
 		<p> <a href="m_2_affines_2.pdf", target="_blank"> Etude d'une fonction affine </a> </p>
 		<p> <a href="m_2_affines_3.pdf", target="_blank"> Tableaux de signes et inéquations </a> </p>
 		
-		<h2>Probabilités</h2>
+		<h2>Chapitre 8 :Probabilités</h2>
 		
 		
 		<p> <a href="m_2_probas_1.pdf", target="_blank"> Expérience aléatoire </a> </p>
@@ -118,7 +118,7 @@
 		
 		
 		
-		<h2>Equations cartésiennes</h2>
+		<h2>Chapitre 9 :Equations cartésiennes</h2>
 		
 		<p> <a href="m_2_eq_cart_1.pdf", target="_blank">  Equations cartésiennes  </a> </p>
 		<p> <a href="m_2_eq_cart_2.pdf", target="_blank">  Equation réduite  </a> </p>
