--- a/m/t/index.html
+++ b/m/t/index.html
@@ -152,6 +152,8 @@
 		
 		<h2>Python</h2>
 		
+		
+		<p> <a href="m_t_python_0.pdf", target="_blank">  Les tableaux en python (objet de type list) </a> </p>
 		<p> <a href="m_t_python_1.pdf", target="_blank">  Les suites et python </a> </p>
 		<p> <a href="m_t_python_2.pdf", target="_blank">  Les probas et python </a> </p>
 		<p> <a href="m_t_python_3.pdf", target="_blank">  Les fonctions et python </a> </p>
