--- a/m/t/index.html
+++ b/m/t/index.html
@@ -95,7 +95,7 @@
 		<p> <a href="m_t_denombrement_1.pdf", target="_blank">  Le principe du dénombrement </a> </p>
 		<p> <a href="m_t_denombrement_2.pdf", target="_blank">  Arrangements et permutations </a> </p>
 		<p> <a href="m_t_denombrement_3.pdf", target="_blank">  Combinaisons </a> </p>
-		
+		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMW81MTdCbWJQQzBKOU9MdnZqZFhmbGplQnRNanVfXzdGa051TEZURWZTS28iLCJ1c2VycyI6IkFub255bWUifQ==", target="_blank">  QCM entraînement </a> </p>
 		
 		<h2>Equation différentielle et primitive</h2>
 		
