--- a/m/t/index.html
+++ b/m/t/index.html
@@ -98,7 +98,7 @@
 		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMW81MTdCbWJQQzBKOU9MdnZqZFhmbGplQnRNanVfXzdGa051TEZURWZTS28iLCJ1c2VycyI6IkFub255bWUifQ==", target="_blank">  QCM entraînement </a> </p>
 		
 		
-		<h2>Succession d'épreuves indépendantes et loi binomiale </h2>
+		<h2>Ckapitre 10: Succession d'épreuves indépendantes et loi binomiale </h2>
 		
 
 		<p> <a href="m_t_loi_binom_1.pdf", target="_blank">  Epreuve de Bernoulli et succession d'épreuves  </a> </p>
@@ -106,7 +106,7 @@
 		
 
 
-		<h2>Equation différentielle et primitive</h2>
+		<h2>Chapitre 11 : Equation différentielle et primitive</h2>
 		
 		<p> <a href="m_t_primitive_1.pdf", target="_blank">  Equation différentielles et primitives </a> </p>
 		<p> <a href="m_t_primitive_2.pdf", target="_blank">  Recherche de primitives d'une fonction </a> </p>
