--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -92,7 +92,7 @@
 		
 		
     <!-- <div id="contenu_cours"> -->
-		<h2>Les bases de données relationnelles</h2>
+		<h2>Chapitre 1 : Les bases de données relationnelles</h2>
 			
 		<p> <a class="metier" href="https://www.onisep.fr/Ressources/Univers-Metier/Metiers/administrateur-administratrice-de-base-de-donnees">  Découvrir le métier d'Administrateur de bases de données </a> </p>
 		<p> <a href="nsi_t_bdd_1.pdf">  Découvrir les bases de données </a> </p>
@@ -104,7 +104,7 @@
 		<p> <a class = "bac" href="nsi_t_bdd_bac.pdf">Les sujets de type bac</a> </p>
 	
 
-		<h2>La récursivité</h2>
+		<h2>Chapitre 2 : La récursivité</h2>
 		
 
 		<p> <a class="autre" href="vache.gif">  La vache qui rit qui rit qui rit ... </a> </p>		
@@ -117,7 +117,7 @@
 		
 		
 		
-		<h2>La Programmation Orientée Objet</h2>
+		<h2>Chapitre 3 : La Programmation Orientée Objet</h2>
 			
 		<p> <a href="nsi_t_poo_1.pdf">  Découvrir le principe de la POO</a> </p>
 		<p> <a href="nsi_t_poo_2.pdf">  La POO sur un exemple (+ exercices) </a> </p>
@@ -126,7 +126,7 @@
 		
 		
 		
-		<h2>Les dictionnaires</h2>
+		<h2>Chapitre 4 : Les dictionnaires</h2>
 			
 		<p> <a href="nsi_t_dico_t.pdf">  Les dictionnaires </a> <a class="autre" href="nsi_t_dico_1.pdf">  -->Le cours de première  </a> </p>
 		<p> <a class="autre" href="nsi_t_dico_mot.txt">  --> Les données du chapitre </a> </p>
@@ -134,7 +134,7 @@
 		
 		
 		
-		<h2>Les structures linéaires</h2>
+		<h2>Chapitre 5 : Les structures linéaires</h2>
 			
 		<p> <a href="nsi_t_sl_1.pdf">Types abstraits...</a> </p>
 		<!-- <p> <a href="nsi_t_sl_2.pdf">Quels sont les différents moyens d'implémenter une liste, une file et une pile</a> </p> -->
@@ -145,13 +145,13 @@
 		<p> <a class = "td" href="nsi_t_sl_td.pdf">Les labyrinthes</a> </p>
 		<p> <a class = "bac" href="nsi_t_sl_bac.pdf">Les sujets de type bac</a> </p>
 		
-		<h2>Diviser pour régner</h2>
+		<h2>Chapitre 6 : Diviser pour régner</h2>
 			
 		<p> <a href="nsi_t_dpr_1.pdf">Intro</a> </p>
 		<p> <a href="nsi_t_dpr_2.pdf">Le tri fusion</a> </p>
 		<p> <a class = "bac" href="nsi_t_dpr_bac.pdf">Les sujets de type bac</a> </p>
 		
-		<h2>Les arbres</h2>
+		<h2>Chapitre 7 : Les arbres</h2>
 			
 		<p> <a href="nsi_t_arbres_1.pdf">Les arbres</a> </p>
 		<p> <a href="nsi_t_arbres_2.pdf">Les arbres binaires</a> </p>
@@ -167,7 +167,7 @@
 		
 		
 		
-		<h2>Les réseaux : Rappels de première (indispensable)</h2>
+		<h2>Chapitre 8 : Les réseaux : Rappels de première (indispensable)</h2>
 			
 		<p>  									<a class = "autre" href="../1/nsi_1_reseau_1.pdf"> Intro </a>
 												<a class = "autre"  href="../1/nsi_1_reseau_2.pdf"> OSI </a>
@@ -176,7 +176,7 @@
 												<a  class = "autre" href="../1/nsi_1_reseau_5.pdf"> Simulateur </a>
 												<a  class = "autre" href="../1/nsi_1_reseau_6.pdf"> Annexes </a></p>
 												
-		<h2>Le routage</h2>
+		<h2>Chapitre 9 : Le routage</h2>
 			
 		<p> <a href="nsi_t_routage_1.pdf">Introduction historique</a> </p>
 		<p> <a href="nsi_t_routage_2.pdf">Rappels de première</a> </p>
@@ -186,7 +186,7 @@
 		<p> <a class = "bac" href="nsi_t_routage_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
-		<h2>Les processus</h2>
+		<h2>Chapitre 10 : Les processus</h2>
 		
 		<p> <a href="nsi_t_processus_1.pdf">Analogie avec la cuisine !</a> </p>
 		<p> <a href="nsi_t_processus_2.pdf">les processus</a> </p>
@@ -195,7 +195,7 @@
 		<p> <a href="nsi_t_processus_5.pdf">Programmation concurente</a> </p>
 		<p> <a class="bac" href="nsi_t_processus_bac.pdf">Exercices types bac</a> </p>
 		
-		<h2>Ecrire un programme, le tester</h2>
+		<h2>Chapitre 11 : Ecrire un programme, le tester</h2>
 		
 		<p> <a href="nsi_t_test_1.pdf">Spécificité</a>  </p>
 		<p> <a href="nsi_t_test_2.pdf">Tester un programme</a>  </p>
@@ -203,29 +203,29 @@
 		<p> <a class="bac" href="nsi_t_validation_bac.pdf">Exercices types bac</a> </p>
 		
 		
-		<h2>Modularité</h2>
+		<h2>Chapitre 12 : Modularité</h2>
 		
 		<p> <a href="nsi_t_modularite_1.pdf">Activité</a>  </p>
 		<p> <a href="nsi_t_modularite_2.pdf">Modularité</a>  </p>
 		
 		
-		<h2> Les graphes </h2>
+		<h2> Chapitre 13 : Les graphes </h2>
 		<p> <a href="nsi_t_graphe_1.pdf">Définitions</a> </p>
 		<p> <a href="nsi_t_graphe_2.pdf">Implémentation d'un graphe</a> </p>
 		
-		<h2> Algorithmes sur les graphes </h2>
+		<h2> Chapitre 14 : Algorithmes sur les graphes </h2>
 		<p> <a href="nsi_t_algo_graphe_1.pdf">Parcours en largeur</a> </p>
 		<p> <a href="nsi_t_algo_graphe_2.pdf">Parcours en profondeur</a> </p>
 		<p> <a href="nsi_t_algo_graphe_3.pdf">Applications</a> </p>
 		
 		
-		<h2> Programmation dynamique</h2>
+		<h2> Chapitre 15 : Programmation dynamique</h2>
 		<p> <a href="nsi_t_prog_dyn_1.pdf">Exemple</a> </p>
 		<p> <a href="nsi_t_prog_dyn_2.pdf">La programmation dynamique</a> </p>
 		<p> <a href="nsi_t_prog_dyn_3.pdf">Le rendu de monnaie</a> </p>
 		<p> <a href="nsi_t_prog_dyn_4.pdf">Un autre exemple</a> </p>
 		
-		<h2>Cryptographie</h2>
+		<h2>Chapitre 16 : Cryptographie</h2>
 			
 		<p> <a href="nsi_t_securisation_1.pdf">Intro</a> </p>
 		<p> <a href="nsi_t_securisation_2.pdf">Le chiffrement symétrique</a>   
@@ -237,7 +237,7 @@
 		<p> <a href="https://www.root-me.org/">Pour les plus curieux : S'entraîner au hacking éthique !</a> </p>
 		
 		
-		<h2>Les SOCs</h2>
+		<h2>Chapitre 17 : Les SOCs</h2>
 			
 		<p> <a href="nsi_t_socs_1.pdf">De l'ENIAC au téléphone portable</a> </p>
 		<p> <a href="nsi_t_socs_2.pdf">Les micro-contrôleurs</a> </p>
@@ -245,18 +245,18 @@
 		
 		
 		
-		<h2>Paradigmes de programmation</h2>
+		<h2>Chapitre 18 : Paradigmes de programmation</h2>
 			
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
 		
-		<h2>Recherche textuelle</h2>
+		<h2>Chapitre 19 : Recherche textuelle</h2>
 			
 		<p> <a href="nsi_t_rt_1.pdf">Introduction</a> </p>
 		<p> <a href="nsi_t_rt_2.pdf">Deux premiers algorithmes naïfs</a> </p>
 		<p> <a href="nsi_t_rt_3.pdf">L'algorithme de Boyer-Moore</a> </p>
 		<p> <a href="nsi_t_rt_4.pdf">Prolongement</a> </p>
 		
-		<h2>Calcuabilité et décidabilité</h2>
+		<h2>Chapitre 20 : Calcuabilité et décidabilité</h2>
 			
 		<p> <a href="nsi_t_calcul_1.pdf">Un programme comme donné ?</a> </p>
 		<p> <a href="nsi_t_calcul_2.pdf">Calculabilité</a> </p>
