--- a/m/t/index.html
+++ b/m/t/index.html
@@ -113,7 +113,16 @@
 		<p> <a href="m_t_primitive_3.pdf", target="_blank"> Equations différentielles </a> </p>
 		
 		
-		<h2>Calcul intégral</h2>
+		
+		<h2>Chapitre 12: Fonctions circulaires</h2>
+		
+		
+		<p> <a href="m_t_circulaires_0.pdf", target="_blank">  Rappels de première </a> </p>
+		<p> <a href="m_t_circulaires_1.pdf", target="_blank">  Définitions et propriétés </a> </p>
+		<p> <a href="m_t_circulaires_2.pdf", target="_blank">  Equations trigonométriques </a> </p>
+		
+		
+		<h2>Chapitre 13: Calcul intégral</h2>
 		
 		
 		<p> <a href="m_t_int_0.pdf", target="_blank">  Calcul intégral et GO </a> </p>
@@ -126,12 +135,6 @@
 		
 		
 		
-		<h2>Fonctions circulaires</h2>
-		
-		
-		<p> <a href="m_t_circulaires_0.pdf", target="_blank">  Rappels de première </a> </p>
-		<p> <a href="m_t_circulaires_1.pdf", target="_blank">  Définitions et propriétés </a> </p>
-		<p> <a href="m_t_circulaires_2.pdf", target="_blank">  Equations trigonométriques </a> </p>
 		
 		
 	
