--- a/m/2/index.html
+++ b/m/2/index.html
@@ -32,6 +32,8 @@
 		<p> <a href="m_2_ch1_3.pdf">  Les puissances  </a> </p>
 		<p> <a href="m_2_ch1_4.pdf">  Les racines carrées  </a> </p>
 		<p> <a href="m_2_ch1_5.pdf">  La valeur absolue  </a> </p>
+		<p> <a href="arithmetique_1.pdf"> Divisibilité et parité </a> </p>
+		<p> <a href="arithmetique_2.pdf"> Les nombres premiers </a> </p>
 		
 		<h2>Chapitre 2 :Généralités sur les fonctions</h2>
 			
@@ -52,11 +54,7 @@
 		<p> <a href="vecteurs_3.pdf">Vecteurs colinéaires</a> </p>
 		<p> <a class="qcm" href= "https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWRmNlprS2I4YlNidVlmNTVOaG1EOUNXYTlMdklOOGNhbFZ5bEdKMm02dm8iLCJ1c2VycyI6IkFub255bWUifQ=="> QCM vecteurs ! </a> </p>
 		
-		<h2>Chapitre 4 :Arithmétique</h2>
-		
-		<p> <a href="arithmetique_1.pdf"> Divisibilité </a> </p>
-		<p> <a href="arithmetique_2.pdf"> Nombres pairs et impairs </a> </p>
-		<p> <a href="arithmetique_3.pdf"> Les nombres premiers </a> </p>
+	
 	
 	
 	
