--- a/m/2/index.html
+++ b/m/2/index.html
@@ -32,8 +32,8 @@
 		<p> <a href="m_2_ch1_3.pdf">  Les puissances  </a> </p>
 		<p> <a href="m_2_ch1_4.pdf">  Les racines carrées  </a> </p>
 		<p> <a href="m_2_ch1_5.pdf">  La valeur absolue  </a> </p>
-		<p> <a href="arithmetique_1.pdf"> Divisibilité et parité </a> </p>
-		<p> <a href="arithmetique_2.pdf"> Les nombres premiers </a> </p>
+		<p> <a href="m_2_ch1_6.pdf"> Divisibilité et parité </a> </p>
+		<p> <a href="m_2_ch1_7.pdf"> Les nombres premiers </a> </p>
 		
 		<h2>Chapitre 2 :Généralités sur les fonctions</h2>
 			
