--- a/m/t/index.html
+++ b/m/t/index.html
@@ -25,20 +25,43 @@
     
 	
 	
-	<section class="featured">
-  <div class="featured-card">
-    <div class="featured-left">
-      <h2 class="featured-title">Comment réviser pour réussir une évaluation ?</h2>
- 
+<section class="ressources-grid">
 
-    </div>
+  <!-- Carte mentale révision -->
+  <article class="ressource-card">
+    <a class="ressource-link" href="revision_carte.png" target="_blank">
+      <div class="ressource-text">
+        <h2 class="ressource-title">
+          Comment réviser pour réussir une évaluation ?
+        </h2>
+      </div>
 
-    <div class="featured-right">
-      <a href="revision_carte.png" target="_blank" class="thumb-link">
-        <img src="revision_carte_miniature.png" alt="Carte mentale : comment réviser une éval" class="thumb-img">
-      </a>
-    </div>
-  </div>
+      <div class="ressource-thumb">
+        <img src="revision_carte_miniature.png"
+             alt="Carte mentale : Comment réviser une évaluation"
+             class="ressource-img">
+      </div>
+    </a>
+  </article>
+
+  <!-- Affiche 'Sauf à...' -->
+  <article class="ressource-card">
+    <a class="ressource-link" href="rien.pdf" target="_blank">
+      <div class="ressource-text">
+        <h2 class="ressource-title">
+          À quoi ça sert les Maths ? A rien ?
+        </h2>
+    
+      </div>
+
+      <div class="ressource-thumb">
+        <img src="rien_miniature.png"
+             alt="Affiche À quoi ça sert d'apprendre ?"
+             class="ressource-img">
+      </div>
+    </a>
+  </article>
+
 </section>
 
 
